cmake_minimum_required(VERSION 3.26)
project(snake)

include(FetchContent)
set(BUILD_SHARED_LIBS OFF)
FetchContent_Declare(SFML GIT_REPOSITORY https://github.com/SFML/SFML.git GIT_TAG 2.5.1)
FetchContent_MakeAvailable(SFML)

set(CMAKE_CXX_STANDARD 17)
add_executable(snake main.cpp
        Game.cpp
        Game.h
        enums.h
        GUI.cpp
        GUI.h)

target_link_libraries(snake sfml-graphics)